# copilot-eval

./: .env.example  .gitignore  README.md  docker-compose.yml  eval-config.yaml  pyproject.toml  test_collision.py  test_coverage_collision.py  test_read_capped.py  test_task_name.py
.github/: copilot-instructions.md
.github/instructions/: pm.instructions.md  product.instructions.md
.github/workflows/: ci.yml  eval.yml
docker/: Dockerfile  entrypoint.sh  noop.sh
docs/: architecture.md  ci-integration.md  configuration.md  issue-guidelines.md  vision.md
docs/examples/: eval-pr-comment.yml.example
eval/: __init__.py  __main__.py  cli.py  config.py  env_utils.py  exceptions.py  judge_executor.py  logging_config.py  naming.py  progress.py  protocols.py  report.py  runner.py  schema.py  trace.py  validation.py
eval/cli/: __init__.py  analyze_cmd.py  baseline_cmd.py  build_cmd.py  init_cmd.py  list_cmd.py  pin_fixtures_cmd.py  run_cmd.py  suggest_cmd.py  validate_cmd.py
eval/collectors/: __init__.py  file_collector.py  jaeger_collector.py
eval/evaluators/: __init__.py  contains.py  judge.py  metric.py  python_eval.py  regex.py  script.py
eval/runners/: __init__.py  docker_cli_runner.py  replay_runner.py
eval/services/: __init__.py  analyze_service.py  baseline_service.py  build_service.py  cache_service.py  check_report.py  cost_service.py  fixtures_service.py  judge_service.py  manifest.py  metrics_service.py  orchestrator.py  resume_service.py  suggest_service.py  trace_service.py
examples/advanced-features/: README.md  eval-config.yaml
examples/advanced-features/scripts/: health-check.sh
examples/azure-skills/: .env.example  README.md  eval-config.yaml
examples/azure-skills/docker/: Dockerfile.azure-skills  Dockerfile.baseline
examples/azure-skills/patterns/: app-deploy.yaml  compliance.yaml  cost-optimization.yaml  diagnostics.yaml  kql-query.yaml  resource-explorer.yaml
examples/azure-skills/scripts/: deploy-pattern.sh  prepare-diagnostics.sh  reset-environment.sh  verify-app-deploy.sh  verify-diagnostics.sh  verify-resource-explorer.sh
examples/azure-skills/variants/: azure-skills.yaml  baseline.yaml
examples/judge-calibration/: README.md  eval-config.yaml
examples/prompt-language/: README.md  eval-config.yaml
schemas/: eval-config.schema.json
scripts/: generate_schema.py
tests/: conftest.py  test_baseline.py  test_cache.py  test_cli.py  test_cli_collector.py  test_collector_plugins.py  test_collectors.py  test_config.py  test_cost.py  test_docker_cli_runner.py  test_evaluators.py  test_fixtures_pin.py  test_fixtures_remote.py  test_init.py  test_integration.py  test_judge_executor.py  test_judge_service_progress.py  test_naming.py  test_orchestrator_progress.py  test_progress.py  test_protocol_contracts.py  test_python_evaluator.py  test_replay_runner.py  test_report.py  test_report_ci_formats.py  test_report_golden.py  test_resource_limits.py  test_resume.py  test_retry.py  test_runner.py  test_runner_plugins.py  test_schema.py  test_suggest.py  test_trace.py  test_validation.py
tests/fixtures/: file-exporter-sample.jsonl
tests/fixtures/golden_reports/: all_failed.compact.md.expected  all_failed.json  basic_ab.json  (+42 more)
(+17 files in other folders)
