[project]
name = "copilot-eval"
version = "0.1.0"
description = "A/B evaluation framework for GitHub Copilot customizations using OTel telemetry"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "click>=8.1",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
progress = ["rich>=13.0"]

[project.scripts]
copilot-eval = "eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
    "types-jsonschema>=4.20",
    "rich>=13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: mark test as integration test (requires Docker, may be slow)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

# `schemas/` lives at the repo root, outside the `eval` package, so it isn't
# picked up by `packages = ["eval"]` above. Bundle it inside the installed
# package too (eval/schemas/...) so `eval.cli.init_cmd` and
# `eval.validation.check_json_schema` can still find it via
# importlib.resources when copilot-eval is installed as a wheel rather than
# run from a source checkout (see eval/cli/init_cmd.py).
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "eval/schemas"
